--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 .container {
   max-width: 700px;
   background: #fff;
-  margin: 30px auto;
+  margin: 3rem auto;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -28,13 +28,13 @@ body {
 display: flex;
 justify-content: center;
 align-items: center;
-background-color: black;
+background-color: rgba(0, 0, 0, 0.397);
 min-width: 100vw;
-min-height: 15vh;
+min-height: 20vh;
 }
 
 .logo img{
-  width: 20%;
+  width:30%;
   margin: 1rem 0;
 }
 
@@ -61,4 +61,72 @@ input, textarea {
 
 .summary {
   margin: 10px 0;
+}
+
+
+@media(max-width:"750px"){
+  body {
+  font-family: Arial, sans-serif;
+  background-image: url('background.jpg');
+  background-size: cover;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
+.container {
+  max-width: 700px;
+  background: #fff;
+  margin: 3rem 5rem;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.menu-item, .cart-item {
+  border-bottom: 1px solid #ddd;
+  padding: 10px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo{
+display: flex;
+justify-content: center;
+align-items: center;
+background-color: rgba(0, 0, 0, 0.397);
+min-width: 100vw;
+min-height: 20vh;
+}
+
+.logo img{
+  width:40%;
+  margin: 1rem 0;
+}
+
+button {
+  padding: 8px 12px;
+  border: none;
+  border-radius: 5px;
+  background: #28a745;
+  color: white;
+  cursor: pointer;
+}
+
+button:hover {
+  background: #ce3f0b;
+}
+
+input, textarea {
+  width: 100%;
+  margin: 5px 0;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.summary {
+  margin: 10px 0;
+}
 }
