--- a/style.css
+++ b/style.css
@@ -14,10 +14,18 @@ font-size: 62.5%;
 .container {
   max-width: 700px;
   background: #fff;
-  margin: 3rem auto;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.over{
+display: flex;
+justify-content: center;
+align-items: center;
+min-width: 100vw;
+min-height: auto;
+margin: 0;
 }
 
 .menu-item, .cart-item {
@@ -67,27 +75,15 @@ input, textarea {
   margin: 10px 0;
 }
 
-.notice{
-display: flex;
-justify-content: center;
-align-items: center;
-min-width: 100vw;
-min-height: 10vh;
-background-color: #ffffff54;
-}
-
-.notice p{
-font-size: 1rem;
-color: white;
-}
-
 .social-links {
-  text-align: center;
-  margin-top: 30px;
+min-width: 100vw;
+background-color: #ffffff54;
+text-align: center;
+min-height: 20vh;
 }
+
 
 .social-links h3 {
-  margin-bottom: 10px;
   color: #e4570a;
 }
 
@@ -129,10 +125,18 @@ font-size: 62.5%;
 .container {
   max-width: 700px;
   background: #fff;
-  margin: 3rem auto;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.over{
+display: flex;
+justify-content: center;
+align-items: center;
+min-width: 100vw;
+min-height: auto;
+margin: 0;
 }
 
 .menu-item, .cart-item {
@@ -182,27 +186,15 @@ input, textarea {
   margin: 10px 0;
 }
 
-.notice{
-display: flex;
-justify-content: center;
-align-items: center;
-min-width: 100vw;
-min-height: 10vh;
-background-color: #ffffff54;
-}
-
-.notice p{
-font-size: 1rem;
-color: white;
-}
-
 .social-links {
-  text-align: center;
-  margin-top: 30px;
+min-width: 100vw;
+background-color: #ffffff54;
+text-align: center;
+min-height: 20vh;
 }
+
 
 .social-links h3 {
-  margin-bottom: 10px;
   color: #e4570a;
 }
 
@@ -228,7 +220,7 @@ color: white;
   opacity: 0.9;
 }}
 @media(max-width:"450px"){
-  body {
+ body {
   font-family: Arial, sans-serif;
   background-image: url('background.jpg');
   background-size: cover;
@@ -244,10 +236,18 @@ font-size: 62.5%;
 .container {
   max-width: 700px;
   background: #fff;
-  margin: 3rem auto;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.over{
+display: flex;
+justify-content: center;
+align-items: center;
+min-width: 100vw;
+min-height: auto;
+margin: 0;
 }
 
 .menu-item, .cart-item {
@@ -297,27 +297,15 @@ input, textarea {
   margin: 10px 0;
 }
 
-.notice{
-display: flex;
-justify-content: center;
-align-items: center;
-min-width: 100vw;
-min-height: 10vh;
-background-color: #ffffff54;
-}
-
-.notice p{
-font-size: 1rem;
-color: white;
-}
-
 .social-links {
-  text-align: center;
-  margin-top: 30px;
+min-width: 100vw;
+background-color: #ffffff54;
+text-align: center;
+min-height: 20vh;
 }
+
 
 .social-links h3 {
-  margin-bottom: 10px;
   color: #e4570a;
 }
 
@@ -341,5 +329,5 @@ color: white;
 .social-icon:hover {
   transform: scale(1.1);
   opacity: 0.9;
-}
+} 
 }
