--- a/style.css
+++ b/style.css
@@ -24,9 +24,18 @@ html {
   width: 100vw;
   background-color: rgba(0, 0, 0, 0.6);
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   transition: all 0.4s ease;
+}
+
+.logo p{
+font-size: 2rem;
+color: #25d366;
+font-style: italic;
+font-weight: bolder;
+font-family: monospace;
 }
 
 .logo img {
