--- a/style.css
+++ b/style.css
@@ -30,6 +30,22 @@ html {
   transition: all 0.4s ease;
 }
 
+.logo {
+  animation: slideFromLeft 2s ease-out forwards;
+}
+
+@keyframes slideFromLeft {
+  from {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+
 .logo p{
 font-size: 1.5rem;
 color: #25d366;
