--- a/style.css
+++ b/style.css
@@ -1,15 +1,17 @@
 /* ----------------------------
    GLOBAL STYLES
 ----------------------------- */
+* {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
 body {
   font-family: Arial, sans-serif;
   background-image: url('background.jpg');
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
   scroll-behavior: smooth;
 }
 
