--- a/styling.css
+++ b/styling.css
@@ -172,12 +172,14 @@ align-items: center;
   overflow: hidden;
   box-shadow: 0 4px 12px rgba(0,0,0,0.08);
   cursor: pointer;
+  min-width: 30vw;
+  min-height: 30vh;
   scroll-snap-align: start;
 }
 
 .item-card img {
   width: 100%;
-  height: 120px;
+  height: 40vh;
   object-fit: cover;
 }
 
@@ -406,9 +408,8 @@ align-items: center;
   background: #e25706;
   color: #fff;
   border: none;
-  padding: 2rem;
-  border-radius: 5rem;
-  font-size: 1.5rem;
+  border-radius: 50rem;
+  font-size: 2rem;
   cursor: pointer;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
   transition: background 0.3s;
@@ -446,6 +447,7 @@ align-items: center;
   margin: 5px auto;
   background: #000000;
   border: none;
+  color: white;
   border-radius: 8px;
   padding: 8px;
   cursor: pointer;
@@ -494,6 +496,7 @@ align-items: center;
 .hidden {
   display: none;
 }
+
 
 
 /* MOBILE STYLES */
