--- a/styling.css
+++ b/styling.css
@@ -109,6 +109,10 @@ align-items: center;
   padding: 1rem;
 }
 
+.page{
+  color: orangered;
+  font-weight: bold;
+}
 /* CATEGORY ROW */
 .category-row {
   display: flex;
@@ -516,6 +520,7 @@ align-items: center;
 
 .services-grid {
   display: grid;
+  flex-wrap: wrap;
   grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
   gap: 25px;
   max-width: 1100px;
@@ -525,6 +530,7 @@ align-items: center;
 .service-card {
   background: #fff;
   border-radius: 12px;
+  height: auto;
   overflow: hidden;
   box-shadow: 0 6px 15px rgba(0,0,0,0.1);
   transition: transform 0.3s ease;
@@ -536,7 +542,7 @@ align-items: center;
 
 .service-card img {
   width: 100%;
-  height: 160px;
+  height: 40rem;
   object-fit: cover;
 }
 
